# speechtux

./: .gitignore  CHANGELOG.md  Cargo.toml  Presentation.md  README.md  Rocket.toml  picosvoxooo.py
examples/javascript/: index.html  script.js
examples/python/: read.py  speechtux.py
gSpeech/: gSpeech.py
src/: cors.rs  ffi.rs  lib.rs
wrappers/python/: speechtux.py
